--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.2.0",
-    "@vercel/analytics": "^1.0.2",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clerk": "^0.8.3",
@@ -43,13 +43,14 @@
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.1",
+    "react-hook-form": "^7.48.2",
     "svix": "^1.13.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "uploadthing": "^5.2.0",
+    "vercel": "^32.5.2",
     "zod": "^3.21.4"
   }
 }
